Don't call invalidateRectsForAllMarkers() for every layer in the updateLayerPositions() traversal https://bugs.webkit.org/show_bug.cgi?id=235211

Reviewed by Alan Bujtas.

RenderLayer::updateLayerPositions() called renderer().document().markers().invalidateRectsForAllMarkers()
but that is called on every layer in the recursive updateLayerPositions() traveral. Yet it only needs
to be called once.

So differentiate the entry points for layer traversal from the recursive traversal functions
by using "recursive" in the naming of the latter, and move two of those entrypoints from
RenderLayerScrollableArea back to RenderLayer so everything is in the same file.

Now the entrypoints can call willUpdateLayerPositions() which does the invalidateRectsForAllMarkers().

* page/FrameView.cpp:
(WebCore::FrameView::updateLayerPositionsAfterScrolling):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::willUpdateLayerPositions):
(WebCore::RenderLayer::updateLayerPositionsAfterStyleChange):
(WebCore::RenderLayer::updateLayerPositionsAfterLayout):
(WebCore::RenderLayer::recursiveUpdateLayerPositions):
(WebCore::RenderLayer::updateLayerPositionsAfterOverflowScroll):
(WebCore::RenderLayer::updateLayerPositionsAfterDocumentScroll):
(WebCore::RenderLayer::recursiveUpdateLayerPositionsAfterScroll):
(WebCore::RenderLayer::updateLayerPositions): Deleted.
(WebCore::RenderLayer::updateLayerPositionsAfterScroll): Deleted.
* rendering/RenderLayer.h:
(WebCore::RenderLayer::recursiveUpdateLayerPositionsAfterScroll):
(WebCore::RenderLayer::updateLayerPositionsAfterScroll): Deleted.
* rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::scrollTo):
(WebCore::RenderLayerScrollableArea::updateLayerPositionsAfterDocumentScroll): Deleted.
(WebCore::RenderLayerScrollableArea::updateLayerPositionsAfterOverflowScroll): Deleted.
* rendering/RenderLayerScrollableArea.h:



Canonical link: https://commits.webkit.org/246034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288008 268f45cc-cd09-0410-ab3c-d52691b4dbfc