Source/WebCore/rendering/RenderLayerScrollableArea.h
@@ -236,9 +236,6 @@ public:
 
     IntSize scrollbarOffset(const Scrollbar&) const;
 
-    void updateLayerPositionsAfterOverflowScroll();
-    void updateLayerPositionsAfterDocumentScroll();
-
     std::optional<LayoutRect> updateScrollPosition(const ScrollPositionChangeOptions&, const LayoutRect& revealRect, const LayoutRect& localExposeRect);
 
 private:
